[gd_scene load_steps=3 format=3 uid="uid://daa3bvxpvlvbw"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_2ehd5"]
[ext_resource type="Texture2D" uid="uid://cmf4cdqsosolw" path="res://assets/menu.png" id="2_bfn6r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ehd5")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -360.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bfn6r")

[node name="ButtonsVBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 90)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_top = 200.0
offset_right = 87.5
offset_bottom = 370.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="NewGameButton" type="Button" parent="ButtonsVBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="LoadLevelButton" type="Button" parent="ButtonsVBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Level Select"

[node name="DisplayHelpButton" type="Button" parent="ButtonsVBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Show Controls"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.0
offset_top = 100.0
offset_right = 248.0
offset_bottom = 184.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 60
text = "The Chasm Between Us"
horizontal_alignment = 1
vertical_alignment = 1
